apps/tandoor/manifests/app/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: webapp
    app.kubernetes.io/name: tandoor
    app.kubernetes.io/part-of: tandoor
    app.kubernetes.io/version: 1.5.15
  name: tandoor
  namespace: tandoor
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: webapp
      app.kubernetes.io/name: tandoor
      app.kubernetes.io/part-of: tandoor
  serviceName: tandoor
  template:
    metadata:
      labels:
        app.kubernetes.io/component: webapp
        app.kubernetes.io/name: tandoor
        app.kubernetes.io/part-of: tandoor
    spec:
      containers:
        - command:
            - /opt/recipes/venv/bin/gunicorn
            - -b
            - :8080
            - --access-logfile
            - '-'
            - --error-logfile
            - '-'
            - --log-level
            - INFO
            - recipes.wsgi
          image: vabene1111/recipes:1.5.15
          imagePullPolicy: IfNotPresent
          name: recipes
          ports:
            - containerPort: 8080
              name: gunicorn
          readinessProbe:
            httpGet:
              path: /accounts/login/?next=/search/
              port: gunicorn
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 30
          resources:
            limits:
              cpu: 250m
              memory: 250Mi
            requests:
              cpu: 50m
              memory: 120Mi
          securityContext:
            runAsUser: 65534
          volumeMounts:
            - mountPath: /opt/recipes/mediafiles
              name: media
              subPath: files
            - mountPath: /opt/recipes/staticfiles
              name: static
              subPath: files
      restartPolicy: Always
      serviceAccountName: tandoor
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: static
          persistentVolumeClaim:
            claimName: static
  updateStrategy:
    type: RollingUpdate
