apps/tandoor/manifests/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipes
  namespace: tandoor
spec:
  selector:
    app: recipes
  ports:
  - port: 8080
    targetPort: gunicorn
    name: gunicorn
    protocol: TCP
